# visual-hive

./: .gitignore  CMakeLists.txt  README.md
src/: AbletonLinkManager.cpp  AbletonLinkManager.h  AssetManager.cpp  AssetManager.h  BpmDetector.cpp  BpmDetector.h  ConfigManager.cpp  ConfigManager.h  EventQueue.h  PlatformSpecificCode.cpp  PlatformSpecificCode.h  VideoPlayerFacade.h  VideoPlayerFacade.mm  VideoPlayerFacade_objc.h  main.cpp
